--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -552,13 +552,12 @@
    "source": [
     "**回答：**\n",
     "\n",
-    "TODODO\n",
     "\n",
     "| 模型 | 应用场景 | 优势 | 缺点 | 选型逻辑 |\n",
-    "| :------------: | :-----------------: | :---------------: | :---------------: | :---------------: |\n",
-    "| 高斯朴素贝叶斯 | workclass | 特征是正态分布 | a | a |\n",
-    "| 决策树 | education_level | a | a | a |\n",
-    "| 随机梯度下降分类器 | age | a | a | a |\n",
+    "| :------------: | :---------------: | :---------------: | :---------------: | :---------------: |\n",
+    "| 高斯朴素贝叶斯 | 很多特征是正态分布 | 特征是正态分布 | 如果输入变量是相关的则效果补好 | 考虑很多特征是正太分布，尝试该方法 |\n",
+    "| 决策树 | 特征较多、彼此关联不大 | 直观好理解，能够处理不相关的特征 | 容易过拟合，泛化能力不太好 | 各种特征相关性不大，尝试该方法 |\n",
+    "| 随机梯度下降 | 线性的二分类模型 | 训练较快，收敛较快 | 如果存在较多的局部最优，则结果可能陷入局部最优不是全局最优 | 用SGD提高线性分类效果 |\n",
     "\n"
    ]
   },
@@ -5911,7 +5910,12 @@
    "source": [
     "**回答： ** \n",
     "\n",
-    "TODODO\n"
+    "随机梯度下降分类器，工作方式可以这么理解，就像人去尝试做一些事情，如炒菜加盐。\n",
+    "第一次不知道该加多少盐，随机加了一部分，很可能味道不好，可能咸了也可能淡了；\n",
+    "第二次做菜根据前一次的经验，酌情改变加盐量，即多放一些或少放一些，再品尝总结，并照此重复几次后，味道基本稳定了，这就是习得的经验。\n",
+    "\n",
+    "随机梯度下降的训练过程，就类似于摸索放盐量的过程。\n",
+    "中国菜与西餐快餐的区别，很大程度也在于西餐快餐很多时候已经有精确的建模，找着模型来计算即可，但是中餐，需要不断摸索，在大脑中训练，得到自己能用的模型，而且一个人训练出的模型，很难直接迁移到另一个人。"
    ]
   },
   {
